k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  type: ExternalName
  externalName: host.k3d.internal
