k8s/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: rewrite-target
spec:
  stripPrefix:
    prefixes:
      - /mobile
      - /web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.middlewares: default-rewrite-target@kubernetescrd
spec:
  rules:
     - http:
        paths:
        - path: /mobile
          pathType: Prefix
          backend:
            service:
              name: mobile-bff
              port:
                number: 80
        - path: /web
          pathType: Prefix
          backend:
            service:
              name: web-bff
              port:
                number: 80
